# cauldron

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  astro-flatfile-content.md  content-admin.md  content-api.md  content-approvals.md  content-audit.md  content-contracts.md  content-operations.md  content-permissions.md  content-reconciliation.md  content-routing.md  development.md  django-admin.md  django-auth.md  django-state.md  flatfile-cms.md  flatfile-workspace.md  modules.md
docs/admin-ai/: extension-guide.md  permissions.md  provider-contract.md  tool-contract.md  trust-model.md
examples/astro-consumer/: astro.config.mjs  package-lock.json  package.json
examples/astro-flatfile-cms/: .gitignore  astro.config.mjs  package-lock.json  package.json
examples/django-consumer/: manage.py
examples/django-consumer/consumer_site/: settings.py  urls.py
examples/django-consumer/site_content/: welcome.md
examples/django-content-control-plane/: .gitignore  README.md  conftest.py  pytest.ini  requirements.txt
examples/django-content-control-plane/config/: admin_ai_bootstrap.py  settings.py  urls.py
examples/django-content-control-plane/tests/: test_e2e_workflow.py  test_example.py
examples/django-state-consumer/: .gitignore  README.md  manage.py  requirements.txt
scripts/: generate_parity_fixtures.py  test_cms_flatfile_wheel.sh
src/cauldron/: __init__.py  apps.py  checks.py  urls.py  views.py
tests/: django_settings.py  test_astro_package.py  test_boundaries.py  test_compose_django_settings.py  test_django_integration.py  test_module_checks.py  test_module_contracts.py  test_module_discovery.py  test_module_registry.py  test_module_resolver.py
tests/fixtures/cauldron-fixture-alpha/: pyproject.toml
tests/fixtures/cauldron-fixture-alpha/src/cauldron_fixture_alpha/: __init__.py
tests/fixtures/cauldron-fixture-beta/: pyproject.toml
tests/fixtures/cauldron-fixture-beta/src/cauldron_fixture_beta/: __init__.py
(+42 files in other folders)
